# IgnisMemory

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: test.yml
docs/: DEPLOY.md
examples/: llm_integration.py  local_agent.py  multi_agent.py
src/mneme/: __init__.py  cli.py  mcp.py
tests/: test_core.py
